--- a/index.html
+++ b/index.html
@@ -4,42 +4,42 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="wrapper">
-            <h1>Lsmap to BBCode Formatter</h1>
-            <div class="grid">
-                <div class="cel">
-                    <textarea id="source" placeholder="Paste your lsmap here..."></textarea>
-                    <div class="row">
-                        <input id="file-selector" type="file" accept=".txt" multiple>
-                        <label for="file-selector" class="button">Upload files</label>
-                        <div class="spacer"></div>
-                        <button id="format" class="button">Format</button>
-                    </div>
+        <div id="layout">
+            <div id="sidebar">
+                <h4>Options</h4>
+                <div id="options" class="controls">
+                    <label>
+                        <input id="show-category-icon" type="checkbox" checked>Show category icon
+                    </label>
+                    <label>
+                        <input id="show-category-code" type="checkbox" checked>Show category code
+                    </label>
+                    <label>
+                        <input id="show-category-name" type="checkbox">Show category name
+                    </label>
+                    <label>
+                        <input id="show-map-count" type="checkbox" checked>Show map count
+                    </label>
                 </div>
-                <div class="cel">
-                    <textarea id="output" placeholder="Result..."></textarea>
-                    <div class="row">
-                        <button id="copy" class="button left">Copy</button>
-                    </div>
+                <h4>Displaying Categories</h4>
+                <div id="categories" class="controls"></div>
+            </div>
+            <div id="main">
+                <h1>Lsmap to BBCode Formatter</h1>
+                <div class="row">
+                    <span>Paste your lsmap or</span>
+                    <input id="file-selector" type="file" accept=".txt" multiple>
+                    <label for="file-selector">Upload files</label>
+                </div>
+                <textarea id="source"></textarea>
+                <div class="row">
+                    <button id="format">Format</button>
+                </div>
+                <textarea id="output"></textarea>
+                <div class="row">
+                    <button id="copy">Copy</button>
                 </div>
             </div>
-            <h4>Options:</h4>
-            <div id="options" class="input-group">
-                <label>
-                    <input id="show-category-icon" type="checkbox" checked>Show category icon
-                </label>
-                <label>
-                    <input id="show-category-code" type="checkbox" checked>Show category code
-                </label>
-                <label>
-                    <input id="show-category-name" type="checkbox">Show category name
-                </label>
-                <label>
-                    <input id="show-map-count" type="checkbox" checked>Show map count
-                </label>
-            </div>
-            <h4>Displaying Categories:</h4>
-            <div id="categories" class="input-group"></div>
         </div>
     </body>
 </html>
