--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="layout">
             <div id="sidebar">
                 <h4>Options</h4>
-                <div id="options" class="controls">
+                <div class="controls" id="options">
                     <label>
                         <input id="show-category-icon" type="checkbox" checked>Show category icon
                     </label>
@@ -22,7 +22,7 @@
                     </label>
                 </div>
                 <h4>Displaying Categories</h4>
-                <div id="categories" class="controls"></div>
+                <div class="controls" id="categories"></div>
             </div>
             <div id="main">
                 <h1>Lsmap to BBCode Formatter</h1>
