--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Lsmap Formatter</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
