--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Lsmap Formatter</title>
         <link rel="stylesheet" href="style.css">
-        <script src="index.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="layout">
